--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body {
-  background: linear-gradient(to right, #634680, #4cbfd0);
+  background: linear-gradient(to right, #00e5ff, #0202ad);
 }
 
 .App-logo {
